// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pages > CreateSocialMediaPost > should render correctly with inputs and no errors 1`] = `
<DocumentFragment>
  <div
    class="app-phase-banner__wrapper"
  >
    <div
      class="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        class="govuk-phase-banner__content"
      >
        <strong
          class="govuk-tag govuk-phase-banner__content__tag"
        >
          beta
        </strong>
        <span
          class="govuk-phase-banner__text"
        >
          This is a new service – your 
          <a
            class="govuk-link"
            href="/feedback"
            id="feedback-link"
          >
            feedback
          </a>
           will help us to improve it.
        </span>
      </p>
    </div>
  </div>
  <div
    class="govuk-width-container"
  >
    <button
      class="govuk-back-link mb-7"
      type="button"
    >
      Back
    </button>
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <form
        action="/api/create-social-media-post?_csrf="
        enctype="multipart/form-data"
        method="post"
      >
        <div
          class="govuk-form-group"
        >
          <h1
            class="govuk-heading-xl"
          >
            Social media message
          </h1>
          <div
            class="govuk-form-group govuk-!-padding-top-3"
          >
            <div
              class="govuk-form-group"
            >
              <div
                class="govuk-form-group"
                id="social-account"
              >
                <label
                  class="govuk-label govuk-label--l"
                  for="social-account-input"
                >
                  Select social media account
                </label>
                <div
                  class=""
                >
                  <select
                    class="govuk-select w-3/4"
                    id="social-account-input"
                    name="socialAccount"
                  >
                    <option
                      disabled=""
                      value=""
                    >
                      Social account
                    </option>
                    <option
                      value="138196022"
                    >
                      testemail@gmail.com (Hootsuite)
                    </option>
                    <option
                      value="985654341"
                    >
                      nextdoor@example.com (Nextdoor)
                    </option>
                  </select>
                </div>
              </div>
            </div>
          </div>
          <div
            class="govuk-form-group"
          >
            <div
              class="govuk-form-group"
              id="message-content"
            >
              <div
                class=""
              >
                <div
                  class="govuk-form-group"
                >
                  <div
                    class="govuk-form-group"
                    id="message-content"
                  >
                    <label
                      class="govuk-label govuk-label--l"
                      for="message-content-input"
                    >
                      Message content
                    </label>
                    <div
                      class="govuk-hint"
                      id="message-content-hint"
                    >
                      You can enter up to 280 characters
                    </div>
                    <div
                      class=""
                    >
                      <textarea
                        aria-describedby="message-content-hint"
                        class="govuk-textarea w-3/4"
                        id="message-content-input"
                        maxlength="280"
                        name="messageContent"
                        rows="3"
                      >
                        Test post 12345
                      </textarea>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <br />
          <div
            class="govuk-form-group"
          >
            <fieldset
              class="govuk-fieldset"
            >
              <legend
                class="govuk-fieldset__legend govuk-fieldset__legend--m"
              >
                <h2
                  class="govuk-fieldset__heading govuk-visually-hidden"
                  id="passenger-type-page-heading"
                >
                  <label
                    class="govuk-label govuk-label--s"
                    for="image"
                    id="image-label"
                  >
                    Upload File
                  </label>
                </h2>
              </legend>
              <div
                class=""
              >
                <input
                  accept="image/png, image/jpeg, image/jpg"
                  aria-labelledby="image-label"
                  class="govuk-file-upload"
                  id="image"
                  name="image"
                  type="file"
                />
              </div>
            </fieldset>
          </div>
        </div>
        <input
          name="disruptionId"
          type="hidden"
          value=""
        />
        <input
          name="socialMediaPostIndex"
          type="hidden"
          value="0"
        />
        <input
          name="createdByOperatorOrgId"
          type="hidden"
          value=""
        />
        <button
          class="govuk-button mt-8"
          data-module="govuk-button"
        >
          Save and continue
        </button>
      </form>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`pages > CreateSocialMediaPost > should render correctly with no inputs 1`] = `
<DocumentFragment>
  <div
    class="app-phase-banner__wrapper"
  >
    <div
      class="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        class="govuk-phase-banner__content"
      >
        <strong
          class="govuk-tag govuk-phase-banner__content__tag"
        >
          beta
        </strong>
        <span
          class="govuk-phase-banner__text"
        >
          This is a new service – your 
          <a
            class="govuk-link"
            href="/feedback"
            id="feedback-link"
          >
            feedback
          </a>
           will help us to improve it.
        </span>
      </p>
    </div>
  </div>
  <div
    class="govuk-width-container"
  >
    <button
      class="govuk-back-link mb-7"
      type="button"
    >
      Back
    </button>
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <form
        action="/api/create-social-media-post?_csrf="
        enctype="multipart/form-data"
        method="post"
      >
        <div
          class="govuk-form-group"
        >
          <h1
            class="govuk-heading-xl"
          >
            Social media message
          </h1>
          <div
            class="govuk-form-group govuk-!-padding-top-3"
          >
            <div
              class="govuk-form-group"
            >
              <div
                class="govuk-form-group"
                id="social-account"
              >
                <label
                  class="govuk-label govuk-label--l"
                  for="social-account-input"
                >
                  Select social media account
                </label>
                <div
                  class=""
                >
                  <select
                    class="govuk-select w-3/4"
                    id="social-account-input"
                    name="socialAccount"
                  >
                    <option
                      disabled=""
                      selected=""
                      value=""
                    >
                      Social account
                    </option>
                  </select>
                </div>
              </div>
            </div>
          </div>
          <div
            class="govuk-form-group"
          >
            <div
              class="govuk-form-group"
              id="message-content"
            >
              <div
                class=""
              >
                <div
                  class="govuk-form-group"
                >
                  <div
                    class="govuk-form-group"
                    id="message-content"
                  >
                    <label
                      class="govuk-label govuk-label--l"
                      for="message-content-input"
                    >
                      Message content
                    </label>
                    <div
                      class="govuk-hint"
                      id="message-content-hint"
                    >
                      You can enter up to 280 characters
                    </div>
                    <div
                      class=""
                    >
                      <textarea
                        aria-describedby="message-content-hint"
                        class="govuk-textarea w-3/4"
                        id="message-content-input"
                        maxlength="280"
                        name="messageContent"
                        rows="3"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="govuk-link"
            data-module="govuk-button"
          >
            <p
              class="text-govBlue govuk-body-m"
            >
              Copy from disruption description
            </p>
          </button>
          <br />
          <div
            class="govuk-form-group"
          >
            <fieldset
              class="govuk-fieldset"
            >
              <legend
                class="govuk-fieldset__legend govuk-fieldset__legend--m"
              >
                <h2
                  class="govuk-fieldset__heading govuk-visually-hidden"
                  id="passenger-type-page-heading"
                >
                  <label
                    class="govuk-label govuk-label--s"
                    for="image"
                    id="image-label"
                  >
                    Upload File
                  </label>
                </h2>
              </legend>
              <div
                class=""
              >
                <input
                  accept="image/png, image/jpeg, image/jpg"
                  aria-labelledby="image-label"
                  class="govuk-file-upload"
                  id="image"
                  name="image"
                  type="file"
                />
              </div>
            </fieldset>
          </div>
        </div>
        <input
          name="disruptionId"
          type="hidden"
          value=""
        />
        <input
          name="socialMediaPostIndex"
          type="hidden"
          value="0"
        />
        <input
          name="createdByOperatorOrgId"
          type="hidden"
          value=""
        />
        <button
          class="govuk-button mt-8"
          data-module="govuk-button"
        >
          Save and continue
        </button>
      </form>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;
